src/fr/1.0/attribute/attribute-input.md
# Type de saisie d'attribut

Les attributs peuvent avoir différents types de saisie qui déterminent non seulement la façon dont vous saisissez les valeurs de l'attribut, mais aussi la façon dont les acheteurs peuvent sélectionner les attributs dans le cas d'options, ou saisir les valeurs.

Les attributs produit sont un ensemble de caractéristiques qui définissent un produit particulier ou un groupe de marchandises. Cela signifie que la taille, la couleur, la saveur, le type d'emballage, etc., constituent des attributs. Les attributs produit ne concernent pas seulement la description générale d'un produit, ils parlent de la valeur des produits qui les rend uniques.

| Propriété    | Description                                                                                                                                       |
| ------------ | ------------------------------------------------------------------------------------------------------------------------------------------------- |
| Text         | Un champ de saisie sur une seule ligne pour du texte.                                                                                              |
| Text Area    | Un champ de saisie sur plusieurs lignes pour saisir des paragraphes de texte, comme une description de produit.                                    |
| Boolean      | Affiche un interrupteur pour basculer entre Oui et Non.                                                                                            |
| Select       | Affiche une liste déroulante de valeurs qui accepte la sélection d'une seule valeur.                                                               |
| Multi Select | Affiche une liste déroulante de valeurs qui accepte plusieurs sélections.                                                                          |
| Date         | Affiche une valeur de date dans le format préféré.                                                                                                 |
| Date Time    | Affiche une valeur de date et d'heure dans le format et le fuseau horaire préférés.                                                                |
| Image        | Ceci est utilisé pour afficher l'image.                                                                                                            |
| Gallery      | Un attribut Gallery qui permet de gérer et d'afficher plusieurs images et vidéos par produit, améliorant l'expérience média du produit.            |
| File         | Les attributs File font référence à un type spécifique d'attributs qui vous permettent d'associer des fichiers au produit.                         |
| Checkbox     | Il représente un état ou une option qui peut être basculé.                                                                                         |
| Price        | Ce type de saisie est utilisé pour créer des champs de prix qui s'ajoutent aux attributs prédéfinis : Prices.                                      |
