src/fr/2.1/attribute/attribute-input.md
# Type de saisie d'attribut

Les attributs peuvent avoir différents types de saisie qui déterminent non seulement la façon dont vous saisissez les valeurs de l'attribut, mais aussi la façon dont les acheteurs peuvent sélectionner les attributs dans le cas d'options, ou saisir des valeurs.

Les attributs de produit sont un ensemble de caractéristiques qui définissent un produit particulier ou un groupe de marchandises. Cela signifie que la taille, la couleur, la saveur, le type d'emballage, etc. constituent des attributs. Les attributs de produit ne concernent pas seulement la description générale d'un produit, mais ils parlent de la valeur des produits qui les rend uniques.

| Propriété  | Description                                                                                           |
|-----------------|------------------------------------------------------------------------------------------------------------------------------------|
| Text      | Un champ de saisie sur une seule ligne pour du texte.                                                                            |
| Text Area   | Un champ de saisie multilignes pour saisir des paragraphes de texte, comme une description de produit.                                                                    |
| Boolean    | Affiche un interrupteur pour basculer entre Oui et Non.                                                                 |
| Select        | Affiche une liste déroulante de valeurs qui accepte une seule sélection. Prend en charge les **Swatch Types** (Color, Image, Text) pour l'affichage visuel des options.                      |
| Multi Select        | Affiche une liste déroulante de valeurs qui accepte plusieurs sélections. Prend en charge les **Swatch Types** (Color, Image, Text) pour l'affichage visuel des options.                                                                           |
| Date       | Affiche une valeur de date au format préféré.
| Date Time       | Affiche une valeur de date et d'heure dans le format et le fuseau horaire préférés.
| Image     | Ceci est utilisé pour afficher l'image.
| Gallery | Un attribut Gallery qui permet de gérer et d'afficher plusieurs images et **vidéos** par produit, améliorant l'expérience média du produit.
| File       | Les attributs File font référence à un type spécifique d'attributs qui vous permet d'associer des fichiers au produit.
| Checkbox       | Il représente un état ou une option pouvant être basculé.
| Price | Ce type de saisie est utilisé pour créer des champs de prix qui s'ajoutent aux attributs prédéfinis : Prices.

## Swatch Types (Nouveau en v2.0)

Les attributs **Select** et **Multiselect** prennent désormais en charge les types de pastilles visuelles :

| Type de pastille | Description |
|-------------|-------------|
| Dropdown | Sélection par liste déroulante standard (comportement par défaut) |
| Color | Affiche des pastilles de couleur — chaque option affiche une case colorée |
| Image | Affiche des miniatures d'image — chaque option affiche une petite image |
| Text | Affiche des étiquettes de texte sous forme de pastilles visuelles stylisées |

Les types de pastilles sont configurés lors de la création ou de l'édition d'un attribut Select/Multiselect. Voir [Créer un attribut produit](./product-attribute.md#swatch-types) pour les instructions de configuration.
